fixing nlr object