@@ -1,11 +1,5 @@
 package uk.gov.hmcts.reform.iacaseapi.domain.service;
 
-import java.text.MessageFormat;
-import java.util.Collections;
-import java.util.List;
-import java.util.Map;
-import java.util.concurrent.ConcurrentHashMap;
-import java.util.stream.Stream;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.cache.annotation.Cacheable;
@@ -16,6 +10,13 @@ import uk.gov.hmcts.reform.iacaseapi.infrastructure.clients.IdamClientApi;
 import uk.gov.hmcts.reform.iacaseapi.infrastructure.clients.model.idam.User;
 import uk.gov.hmcts.reform.iacaseapi.infrastructure.clients.model.idam.UserInfo;
 import uk.gov.hmcts.reform.iacaseapi.infrastructure.security.idam.IdentityManagerResponseException;
+
+import java.text.MessageFormat;
+import java.util.Collections;
+import java.util.List;
+import java.util.Map;
+import java.util.concurrent.ConcurrentHashMap;
+import java.util.stream.Stream;
 
 @Slf4j
 @Component
@@ -137,6 +138,6 @@ public class IdamService {
             log.error("No user found for userEmail: {}", email);
             return null;
         }
-        return response.getBody().get(0);
+        return response.getBody().getFirst();
     }
 }
